rustdesk/Service-rustdesk-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/sharing-cross-namespace: '*'
    lbipam.cilium.io/sharing-key: default-ippool
  labels:
    homelab/loadbalancer: entrypoint
  name: rustdesk-tcp
  namespace: rustdesk
spec:
  ports:
    - name: tcp-port-21115
      port: 21115
      protocol: TCP
    - name: tcp-port-21116
      port: 21116
      protocol: TCP
    - name: tcp-port-21117
      port: 21117
      protocol: TCP
  selector:
    app: rustdesk
  type: LoadBalancer
