rustdesk/Service-rustdesk-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-udp
  namespace: rustdesk
spec:
  ports:
    - name: udp-port-21116
      port: 21116
      protocol: UDP
  selector:
    app.kubernetes.io/name: rustdesk
