rustdesk/IngressRoute-rustdesk-tcp-21115.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustdesk-tcp-21115
  namespace: rustdesk
spec:
  entryPoints:
    - tcp-port-21115
  routes:
    - kind: Rule
      match: Host(`rustdesk.anderwerse.de`)
      services:
        - name: rustdesk-tcp
          namespace: rustdesk
          port: 21115
