rustdesk/IngressRoute-rustdesk.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustdesk
  namespace: rustdesk
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rustdesk.anderwerse.de`)
      services:
        - name: rustdesk-tcp
          namespace: rustdesk
          port: 21115
  tls:
    secretName: anderwersede-tls-certificate
