rustdesk/IngressRouteTCP-rustdesk-tcp-21115.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rustdesk-tcp-21115
  namespace: rustdesk
spec:
  entryPoints:
    - tcp-port-21115
  routes:
    - match: HostSNI(`rustdesk.anderwerse.de`)
      services:
        - name: rustdesk-tcp
          namespace: rustdesk
          port: 21115
  tls:
    secretName: anderwersede-tls-certificate
