rustdesk/IngressRouteTCP-rustdesk-tcp-21117.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rustdesk-tcp-21117
  namespace: rustdesk
spec:
  entryPoints:
    - tcp-port-21117
  routes:
    - match: Host(`rustdesk.anderwerse.de`)
      services:
        - name: rustdesk-tcp
          namespace: rustdesk
          port: 21117
